--- a/RUP/nbproject/project.properties
+++ b/RUP/nbproject/project.properties
@@ -29,11 +29,17 @@ dist.jar=${dist.dir}/RUP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.selenium-server-standalone-3.5.0.jar=C:\\Users\\mahe\\Documents\\rup\\selenium-server-standalone-3.5.0.jar
+file.reference.webcam-capture-0.3.10.jar=C:\\Users\\mahe\\Documents\\rup\\webcam-capture-0.3.10.jar
+file.reference.webcam-capture-driver-javacv-0.3.10.jar=C:\\Users\\mahe\\Documents\\rup\\webcam-capture-driver-javacv-0.3.10.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.selenium-server-standalone-3.5.0.jar}:\
+    ${file.reference.webcam-capture-0.3.10.jar}:\
+    ${file.reference.webcam-capture-driver-javacv-0.3.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
