--- a/RUP/nbproject/project.properties
+++ b/RUP/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/RUP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.junit-4.10.jar=junit-4.10.jar
 file.reference.selenium-server-standalone-3.5.0.jar=C:\\Users\\mahe\\Documents\\rup\\selenium-server-standalone-3.5.0.jar
 file.reference.webcam-capture-0.3.10.jar=C:\\Users\\mahe\\Documents\\rup\\webcam-capture-0.3.10.jar
 file.reference.webcam-capture-driver-javacv-0.3.10.jar=C:\\Users\\mahe\\Documents\\rup\\webcam-capture-driver-javacv-0.3.10.jar
@@ -50,7 +51,9 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.junit-4.10.jar}:\
+    ${libs.testng.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
