anish: Final Commit

--- a/RUP/nbproject/project.properties
+++ b/RUP/nbproject/project.properties
@@ -29,10 +29,15 @@ dist.jar=${dist.dir}/RUP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.bridj-0.6.2.jar=C:\\Users\\mahe\\Downloads\\bridj-0.6.2.jar
 file.reference.junit-4.10.jar=junit-4.10.jar
 file.reference.selenium-server-standalone-3.5.0.jar=C:\\Users\\mahe\\Documents\\rup\\selenium-server-standalone-3.5.0.jar
+file.reference.selenium-server-standalone-3.5.0.jar-1=C:\\Users\\mahe\\Downloads\\selenium-server-standalone-3.5.0.jar
+file.reference.slf4j-api-1.7.25.jar=C:\\Users\\mahe\\Downloads\\slf4j-api-1.7.25.jar
 file.reference.webcam-capture-0.3.10.jar=C:\\Users\\mahe\\Documents\\rup\\webcam-capture-0.3.10.jar
+file.reference.webcam-capture-0.3.10.jar-1=C:\\Users\\mahe\\Downloads\\webcam-capture-0.3.10.jar
 file.reference.webcam-capture-driver-javacv-0.3.10.jar=C:\\Users\\mahe\\Documents\\rup\\webcam-capture-driver-javacv-0.3.10.jar
+file.reference.webcam-capture-driver-javacv-0.3.10.jar-1=C:\\Users\\mahe\\Downloads\\webcam-capture-driver-javacv-0.3.10.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -40,7 +45,12 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.selenium-server-standalone-3.5.0.jar}:\
     ${file.reference.webcam-capture-0.3.10.jar}:\
-    ${file.reference.webcam-capture-driver-javacv-0.3.10.jar}
+    ${file.reference.webcam-capture-driver-javacv-0.3.10.jar}:\
+    ${file.reference.selenium-server-standalone-3.5.0.jar-1}:\
+    ${file.reference.webcam-capture-0.3.10.jar-1}:\
+    ${file.reference.webcam-capture-driver-javacv-0.3.10.jar-1}:\
+    ${file.reference.slf4j-api-1.7.25.jar}:\
+    ${file.reference.bridj-0.6.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
